--- a/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
+++ b/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://orion.mokpo.ac.kr:8314
+    url: jdbc:mysql://orion.mokpo.ac.kr:8314/sajotuna
     username: root
     password: ScE1234**
 
