--- a/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
+++ b/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
@@ -2,18 +2,17 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://orion.mokpo.ac.kr:8314/sajotuna
+    url: jdbc:mysql://orion.mokpo.ac.kr:8314/fourjotuna
     username: root
     password: ScE1234**
 
-  # Thymeleaf ?? ????
-  thymeleaf:
-    cache: false
 
   # spring data jpa ??
   jpa:
-    database-platform: org.hibernate.dialect.MySQL57Dialect
+    database-platform:
     open-in-view: false
     show-sql: true
     hibernate:
       ddl-auto: update
+
+
