--- a/SajoTuna_BE/SajoTuna/build.gradle
+++ b/SajoTuna_BE/SajoTuna/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'commons-fileupload:commons-fileupload:1.4' // 최신 버전 사용 가능
+	implementation 'commons-io:commons-io:2.11.0' // 최신 버전 사용 가능
+
 }
 
 tasks.named('bootBuildImage') {
