--- a/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
+++ b/SajoTuna_BE/SajoTuna/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 # database ?? ??
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://orion.mokpo.ac.kr:8314/fourjotuna
